@startuml klondikev7,

class Card {
  - suits: String
  - values: String
  - deck: Array[52]
  + constructor()
  + toString()
  + createAndShuffleDeck()
}

class Klondike {
  - stock: new Stock()
  - waste: new Waste()
  - foundation: new Foundation()
  - tableau: new Tableau(this.stock)
  + constructor()
}


class Stock {
  - cards: Array[Card]
  + constructor()
  + populateStock() 
}

class Tableau {
  - tableaus: Array[[7]]
  + constructor(stock)
  + receiveCards(stock) 
  + distributeCards(stock)
  + canMoveCardToAnotherTableau(cardToMove, destinationTableau)
}

class Foundation {
  - foundations: Array[[4]]
  + constructor()
  + moveCardToFoundation(card, foundationIndex)
  + isMoveToFoundationValid(card, foundationPile)
  + isNextValueInFoundationInOrder(currentValue, nextValue)
}

class Waste {
  - cards: Array[{}]
  + constructor()
  + receiveCardFromStock()
}

Stock "1"  -[dotted]-> "*" Card
Klondike "1" --> "1" Stock
Klondike "1" --> "1" Waste
Klondike "1" --> "1" Foundation
Klondike "1" --> "1" Tableau

@enduml

